--- a/packages/lights/light_triggers_back_garage.yaml
+++ b/packages/lights/light_triggers_back_garage.yaml
@@ -17,7 +17,7 @@ automation:
       - service: light.turn_on
         data:
           entity_id:
-            - light.back_garage
+            - light.back_garage_back_garage
 
   ### Back Garage
   # Close = Turn off
@@ -30,4 +30,4 @@ automation:
       service: light.turn_off
       data:
         entity_id:
-          - light.back_garage
+          - light.back_garage_back_garage
