--- a/packages/lights/light_motion_timers_kitchen.yaml
+++ b/packages/lights/light_motion_timers_kitchen.yaml
@@ -32,7 +32,7 @@ automation:
     action:
       - service: light.turn_off
         data:
-          entity_id: light.kitchen
+          entity_id: light.kitchen_kitchen
           transition: 10
 
   ### Turn on Kitchen Lights when movement
@@ -57,7 +57,7 @@ automation:
     action:
       - service: light.turn_on
         data_template:
-          entity_id: light.kitchen
+          entity_id: light.kitchen_kitchen
           # transition: 10
           # brightness: >-
           #   {% set time = states('sensor.time') %}
@@ -105,7 +105,7 @@ automation:
           entity_id: timer.kitchenwork
       - service: light.turn_on
         data:
-          entity_id: light.kitchen
+          entity_id: light.kitchen_kitchen
           transition: 10
           #brightness: 175
   # Timer end = Turn off
@@ -128,7 +128,7 @@ automation:
     action:
       - service: light.turn_off
         data:
-          entity_id: light.kitchen
+          entity_id: light.kitchen_kitchen
           transition: 10
       - service: timer.cancel
         data:
