--- a/packages/lights/test_light.yaml
+++ b/packages/lights/test_light.yaml
@@ -5,12 +5,12 @@
 #       test_light:
 #         friendly_name: "Test Light"
 #         icon_template: >-
-#           {% if is_state("light.lounge", "on") %}
+#           {% if is_state("light.lounge_lounge", "on") %}
 #             mdi:door-open
-#           {% elif is_state("light.lounge", "off") %}
+#           {% elif is_state("light.lounge_lounge", "off") %}
 #             mdi:door-closed-lock
 #           {% else %}
 #             mdi:door-closed
 #           {% endif %}
 #         value_template: >-
-#           {{ (states('light.lounge')) }}
+#           {{ (states('light.lounge_lounge')) }}
