--- a/packages/energy/solcast_rest.yaml
+++ b/packages/energy/solcast_rest.yaml
@@ -223,15 +223,15 @@ automation:
       - service: mqtt.publish
         data:
           topic: home/solcast/energy_today_predicted
-          payload_template: "{{ states('sensor.solcast_forecast') }}"
+          payload: "{{ states('sensor.solcast_forecast') }}"
           retain: true
       - service: mqtt.publish
         data:
           topic: home/solcast/peak_power_today_predicted
-          payload_template: "{{ states('sensor.solcast_forecast_peak_power_today') }}"
+          payload: "{{ states('sensor.solcast_forecast_peak_power_today') }}"
           retain: true
       - service: mqtt.publish
         data:
           topic: home/solcast/peak_time_today_predicted
-          payload_template: "{{ states('sensor.solcast_forecast_peak_time_today') }}"
+          payload: "{{ states('sensor.solcast_forecast_peak_time_today') }}"
           retain: true
