payload_template deprecated in 2025.2.0

--- a/packages/climate/weather_today_static_sensors.yaml
+++ b/packages/climate/weather_today_static_sensors.yaml
@@ -35,13 +35,13 @@ automation:
       - service: mqtt.publish
         data:
           topic: home/weather/today/max
-          payload_template: >
+          payload: >
             {{ today | max }}
           retain: true
       - service: mqtt.publish
         data:
           topic: home/weather/today/min
-          payload_template: >
+          payload: >
             {{ today | min }}
           retain: true
     mode: single
