--- a/packages/energy/geysers.yaml
+++ b/packages/energy/geysers.yaml
@@ -354,18 +354,18 @@ automation:
         event_type: timer.finished
         event_data:
           entity_id: timer.main_geyser
-      - platform: time
-        at: '5:55:00'
-      - platform: time
-        at: '5:58:00'
-      - platform: time
-        at: '5:59:00'
-      - platform: time
-        at: '18:50:00'
-      - platform: time
-        at: '18:55:00'
-      - platform: time
-        at: '18:59:00'
+      # - platform: time
+      #   at: '5:55:00'
+      # - platform: time
+      #   at: '5:58:00'
+      # - platform: time
+      #   at: '5:59:00'
+      # - platform: time
+      #   at: '18:50:00'
+      # - platform: time
+      #   at: '18:55:00'
+      # - platform: time
+      #   at: '18:59:00'
       - platform: state
         entity_id: switch.main_bathroom_geyser
         to: 'on'
@@ -531,18 +531,18 @@ automation:
         event_type: timer.finished
         event_data:
           entity_id: timer.front_geyser
-      - platform: time
-        at: '6:25:00'
-      - platform: time
-        at: '6:29:00'
-      - platform: time
-        at: '6:30:00'
-      - platform: time
-        at: '18:50:00'
-      - platform: time
-        at: '18:55:00'
-      - platform: time
-        at: '18:59:00'
+      # - platform: time
+      #   at: '6:25:00'
+      # - platform: time
+      #   at: '6:29:00'
+      # - platform: time
+      #   at: '6:30:00'
+      # - platform: time
+      #   at: '18:50:00'
+      # - platform: time
+      #   at: '18:55:00'
+      # - platform: time
+      #   at: '18:59:00'
       - platform: state
         entity_id: switch.front_bathroom_geyser
         to: 'on'
