--- a/packages/finance/price_indicator_sensors.yaml
+++ b/packages/finance/price_indicator_sensors.yaml
@@ -1,20 +1,21 @@
 ---
 
 sensor:
+  # This casese a lot of errors in the logs after 25 requests per day....disabling
   # https://www.home-assistant.io/integrations/alpha_vantage/
   # Note: AMZN showed an old price, only updated a day+ later
-  - platform: alpha_vantage
-    api_key: !secret AlphaVantage
-    # symbols:
-    #   - symbol: AMZN
-    #     name: AMZN
-    foreign_exchange:
-      - name: USD_ZAR
-        from: USD
-        to: ZAR
-      # - from: BTC
-      #   to: USD
-      #   name: Bitcoin
+  # - platform: alpha_vantage
+  #   api_key: !secret AlphaVantage
+  #   # symbols:
+  #   #   - symbol: AMZN
+  #   #     name: AMZN
+  #   foreign_exchange:
+  #     - name: USD_ZAR
+  #       from: USD
+  #       to: ZAR
+  #     # - from: BTC
+  #     #   to: USD
+  #     #   name: Bitcoin
 
   # https://github.com/custom-components/sensor.avanza_stock
   - platform: avanza_stock
