fix HA CI error on missing screts

--- a/secrets.fake.yaml
+++ b/secrets.fake.yaml
@@ -84,6 +84,8 @@ latitude_work: -33.11111111111111
 longitude_work: 18.66666666666666
 latitude_currorosencastle: -33.11111111111111
 longitude_currorosencastle: 18.66666666666666
+latitude_smith_residence: -33.11111111111111
+longitude_smith_residence: 18.66666666666666
 
 ha_internal_rest_api_headers: Bearer token
 
