--- a/packages/security/device_tacker_triggers.yaml
+++ b/packages/security/device_tacker_triggers.yaml
@@ -10,9 +10,9 @@ binary_sensor:
         {{ (is_state('sensor.pixel_4_battery_state', 'charging')
           or is_state('sensor.pixel_4_battery_state', 'full')
           or is_state('sensor.pixel_4_battery_state', 'not_charging'))
-          and (is_state('sensor.nokia_6_1_battery_state', 'charging')
-          or is_state('sensor.nokia_6_1_battery_state', 'full')
-          or is_state('sensor.nokia_6_1_battery_state', 'not_charging')) }}
+          and (is_state('sensor.pixel_7a_battery_state', 'charging')
+          or is_state('sensor.pixel_7a_battery_state', 'full')
+          or is_state('sensor.pixel_7a_battery_state', 'not_charging')) }}
       # silly workaround needed - mi9t phone shows not_charging when in fact charging...
 
     either_parent_phones_charging:
@@ -22,8 +22,9 @@ binary_sensor:
         {{ (is_state('sensor.pixel_4_battery_state', 'charging')
           or is_state('sensor.pixel_4_battery_state', 'full')
           or is_state('sensor.pixel_4_battery_state', 'not_charging'))
-          or (is_state('sensor.nokia_6_1_battery_state', 'charging')
-          or is_state('sensor.nokia_6_1_battery_state', 'full')) }}
+          or (is_state('sensor.pixel_7a_battery_state', 'charging')
+          or is_state('sensor.pixel_7a_battery_state', 'full')
+          or is_state('sensor.pixel_7a_battery_state', 'not_charging')) }}
 
 automation:
   - alias: Parents both in bed when both phones charge
