--- a/packages/presence/zones.yaml
+++ b/packages/presence/zones.yaml
@@ -46,7 +46,7 @@ zone:
     icon: mdi:school
 
 # David = device_tracker.pixel_4
-# Karen = device_tracker.nokia_6_1
+# Karen = device_tracker.pixel_7a
 
 binary_sensor:
   platform: template
@@ -54,7 +54,7 @@ binary_sensor:
     anyone_home:
       friendly_name: "Anyone Home"
       value_template: >-
-        {{ is_state('device_tracker.nokia_6_1', 'home')
+        {{ is_state('device_tracker.pixel_7a', 'home')
            or is_state('device_tracker.pixel_4', 'home') }}
 
 automation:
@@ -65,7 +65,7 @@ automation:
         platform: state
         from: 'not_home'
         not_to: ["unavailable", "unknown"]
-      - entity_id: device_tracker.nokia_6_1
+      - entity_id: device_tracker.pixel_7a
         platform: state
         from: 'not_home'
         not_to: ["unavailable", "unknown"]
@@ -74,7 +74,7 @@ automation:
         variables:
           person: >
             {% if (trigger.entity_id == "device_tracker.pixel_4") %}David{% endif %}
-            {% if (trigger.entity_id == "device_tracker.nokia_6_1") %}Karen{% endif %}
+            {% if (trigger.entity_id == "device_tracker.pixel_7a") %}Karen{% endif %}
           location: >
             {{ trigger.to_state.state }}
       - service: script.alert
@@ -92,7 +92,7 @@ automation:
         platform: state
         to: 'not_home'
         not_from: ["unavailable", "unknown"]
-      - entity_id: device_tracker.nokia_6_1
+      - entity_id: device_tracker.pixel_7a
         platform: state
         to: 'not_home'
         not_from: ["unavailable", "unknown"]
@@ -101,7 +101,7 @@ automation:
         variables:
           person: >
             {% if (trigger.entity_id == "device_tracker.pixel_4") %}David{% endif %}
-            {% if (trigger.entity_id == "device_tracker.nokia_6_1") %}Karen{% endif %}
+            {% if (trigger.entity_id == "device_tracker.pixel_7a") %}Karen{% endif %}
           location: >
             {{ trigger.from_state.state }}
       - service: script.alert
@@ -119,7 +119,7 @@ automation:
   #     - entity_id: device_tracker.pixel_4
   #       platform: state
   #       to: 'Curro Rosen Castle'
-  #     - entity_id: device_tracker.nokia_6_1
+  #     - entity_id: device_tracker.pixel_7a
   #       platform: state
   #       to: 'Curro Rosen Castle'
   #   action:
@@ -130,7 +130,7 @@ automation:
   #         object: 'Tracking'
   #         message: >
   #           {% if (states.device_tracker.pixel_4.state == "Curro Rosen Castle") %}David{% endif %}
-  #           {% if (states.device_tracker.nokia_6_1.state == "Curro Rosen Castle") %}Karen{% endif %}
+  #           {% if (states.device_tracker.pixel_7a.state == "Curro Rosen Castle") %}Karen{% endif %}
   #           arrived at Curro Rosen Castle
   #           Trigger:
   #           ```{{ trigger }}```
@@ -141,7 +141,7 @@ automation:
   #     - entity_id: device_tracker.pixel_4
   #       platform: state
   #       from: 'Curro Rosen Castle'
-  #     - entity_id: device_tracker.nokia_6_1
+  #     - entity_id: device_tracker.pixel_7a
   #       platform: state
   #       from: 'Curro Rosen Castle'
   #   action:
