--- a/custom_components/average/manifest.json
+++ b/custom_components/average/manifest.json
@@ -14,6 +14,8 @@
     "documentation": "https://github.com/Limych/ha-average",
     "iot_class": "calculated",
     "issue_tracker": "https://github.com/Limych/ha-average/issues",
-    "requirements": [],
-    "version": "2.3.4"
+    "requirements": [
+        "pip>=21.3.1"
+    ],
+    "version": "2.4.0"
 }
